app/assets/stylesheets/projects.css
.projects_container {
  margin-top: 6em;
  background-color: black;
  height: 100%;
}

.projects_header {
  font-family: 'Permanent Marker', cursive;
}

.projects_header_text {
  color: white;
  font-size: 2em;
  text-align: center;
}

.projects_header_subtext {
  color: white;
  font-size: smaller;
  text-align: center;
  margin-bottom: 1em;
}

.projects_show_container {
  margin: auto ;
}

.projects_show{
  display: block;
}


img.photo {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  top: 0;
  z-index: 2;
  left: 0;
  text-align: center;
  margin: auto;
}


.flip {
  -webkit-backface-visibility:hidden;
  -webkit-transform:translateX(0);
  -moz-backface-visibility:hidden;
  -moz-transform:translateX(0);
}
.flip.out {
  -webkit-transform: rotateY(-90deg) scale(.9);
  -webkit-animation-name: flipouttoleft;
  -webkit-animation-duration: 175ms;
  -moz-transform: rotateY(-90deg) scale(.9);
  -moz-animation-name: flipouttoleft;
  -moz-animation-duration: 175ms;
}
.flip.in {
  -webkit-animation-name: flipintoright;
  -webkit-animation-duration: 1000ms;
  -moz-animation-name: flipintoright;
  -moz-animation-duration: 1000ms;
}
.flip.out.reverse {
  -webkit-transform: rotateY(90deg) scale(.9);
  -webkit-animation-name: flipouttoright;
  -moz-transform: rotateY(90deg) scale(.9);
  -moz-animation-name: flipouttoright;
}
.flip.in.reverse {
  -webkit-animation-name: flipintoleft;
  -moz-animation-name: flipintoleft;
}
@-webkit-keyframes flipouttoleft {
  from { -webkit-transform: rotateY(0); }
  to { -webkit-transform: rotateY(-90deg) scale(.9); }
}
@-moz-keyframes flipouttoleft {
  from { -moz-transform: rotateY(0); }
  to { -moz-transform: rotateY(-90deg) scale(.9); }
}
@-webkit-keyframes flipouttoright {
  from { -webkit-transform: rotateY(0) ; }
  to { -webkit-transform: rotateY(90deg) scale(.9); }
}
@-moz-keyframes flipouttoright {
  from { -moz-transform: rotateY(0); }
  to { -moz-transform: rotateY(90deg) scale(.9); }
}
@-webkit-keyframes flipintoleft {
  from { -webkit-transform: rotateY(-90deg) scale(.9); }
  to { -webkit-transform: rotateY(0); }
}
@-moz-keyframes flipintoleft {
  from { -moz-transform: rotateY(-90deg) scale(.9); }
  to { -moz-transform: rotateY(0); }
}
@-webkit-keyframes flipintoright {
  from { -webkit-transform: rotateY(90deg) scale(.9); }
  to { -webkit-transform: rotateY(0); }
}
@-moz-keyframes flipintoright {
  from { -moz-transform: rotateY(90deg) scale(.9); }
  to { -moz-transform: rotateY(0); }
}

/*---------------------------*/

figure, figcaption {
  display: block;
}

/*.projects_show{
  height: 285px;
  width: 285px;
  padding: 1% 0;
  margin: 0 auto;
  display: block;
  margin-bottom: 10px;
  text-align: center;
  margin-bottom: 16px;
}*/

.projects_show figure{
  width: 600px;
  height: 450px;
/*  margin-left: -2px;
  padding: 5px;*/
  z-index: 2;
/*  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
  background: #eee6d8;*/

  -webkit-box-shadow: 4px 4px 8px -4px rgba(0, 0, 0, .75);
  -moz-box-shadow: 4px 4px 8px -4px rgba(0, 0, 0, .75);
  box-shadow: 4px 4px 8px -4px rgba(0, 0, 0, .75);
  background: -webkit-linear-gradient(top, white, white 20%, white 60%);
  background: -moz-linear-gradient(top, #ede1c9, #fef8e2 20%, #f2ebde 60%);
  background: -o-linear-gradient(top, #ede1c9, #fef8e2 20%, #f2ebde 60%);
  background: -ms-linear-gradient(top, #ede1c9, #fef8e2 20%, #f2ebde 60%);
  background: linear-gradient(top, #ede1c9, #fef8e2 20%, #f2ebde 60%);
  /*-webkit-transform:rotate(-1deg);*/
/*  -moz-transform: rotate(-1deg);
  -o-transform: rotate(-1deg);
  -ms-transform: rotate(-1deg);
  transform: rotate(-1deg);*/
  -webkit-backface-visibility:hidden;
/*  color: #000;
  border: 1px solid #fff;
  border: 1px solid #dfdfdf;
  border: 1px solid rgba(96, 96, 96, 0.2);*/
  text-align: center;
}

.projects_show .flippable {
  width: 100%;
  -webkit-perspective: 1000;
  -moz-perspective: 1000;
  margin: auto;
}

.projects_show .front {
  position: relative;
  margin: auto ;
  margin-bottom: 2em;
}

.projects_show .back {
  position: relative;
  margin: auto ;
  display: none;
  margin-bottom: 2em;
}

.projects_show img {
  background-size: cover;
  height: 450px;
  width: 600px;
  margin: 2px auto;
/*  margin-bottom: 5px;*/
  position: relative;
  background-size: cover;
 /* width: 100%;
  height: 100%;*/
/*  border: 1px solid #fff;
  border: 1px solid #dfdfdf;
  border: 1px solid rgba(96, 96, 96, 0.2)*/;
}

.projects_show figcaption{
  text-align: center;
  font-size:1.0em;
/*  color:#454f40;*/
  letter-spacing:0.09em;
  overflow: scroll;
}

